# elearning-be

./: README.md  pyproject.toml  requirements.txt
elearning/: hooks.py
elearning/api/: __init__.py  api.py  auth.py  install_jwt.py  jwt_auth.py  test_api.py
elearning/elearning/doctype/flashcard/: flashcard.js  flashcard.json  flashcard.py  test_flashcard.py
elearning/elearning/doctype/flashcard_session/: flashcard_session.js  flashcard_session.json  flashcard_session.py  test_flashcard_session.py
elearning/elearning/doctype/ordering_step_item/: ordering_step_item.js  ordering_step_item.json  ordering_step_item.py  test_ordering_step_item.py
elearning/elearning/doctype/question/: question.json  question.py
elearning/elearning/doctype/test/: test.json  test.py
elearning/elearning/doctype/test_attempt/: test_attempt.json  test_attempt.py
elearning/elearning/doctype/topics/: topics.json  topics.py
elearning/elearning/doctype/user_exam_attempt/: user_exam_attempt.js  (+3 more)
elearning/elearning/utils/: file_uploader.py  gemini_grader_service.py
elearning/fixtures/: doctype.json  email_verification_token.json  flashcard.json  ordering_step_item.json  question.json  rubric_item.json  rubric_score_item.json  test.json  user.json  user_exam_attempt.json  user_exam_attempt_detail.json  user_srs_progress.json
elearning/overrides/: user.py
elearning/overrides/user/: __init__.py  custom_user.py
elearning/www/nextjs-app/: .gitignore  README.md  README_JWT_AUTH.md  jsconfig.json  next.config.js  nginx-config.conf  package-lock.json  package.json  tailwind.config.js
(+129 files in other folders)
